GearsetPOC/force-app/main/default/objects/Subscription_Type__c/Subscription_Type__c.object-meta.xml
<CustomObject>
    <description>Stores the types of TTP programs and valid duration</description>
    <label>Subscription Type</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Subscription Type Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>