GearsetPOC/force-app/main/default/objects/Subscription_Type__c/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <label>Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thalys</fullName>
            </value>
            <value>
                <fullName>Izy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>