GearsetPOC/force-app/main/default/objects/Subscription_Type__c/fields/Ready_for_Use__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Use</label>
    <type>Checkbox</type>
</CustomField>