GearsetPOC/force-app/main/default/objects/Subscription_Type__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(AND(Ready_for_Use__c = TRUE, Validity_Start_Date__c &lt;= TODAY(), Validity_End_Date__c &gt;= TODAY()), &#39;Active&#39;, &#39;Inactive&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>