GearsetPOC/force-app/main/default/objects/Subscription_Type__c/fields/Subscription_Type_SVOC_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type_SVOC_ID__c</fullName>
    <label>Subscription Type SVOC ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>