GearsetPOC/force-app/main/default/objects/Subscription_Type__c/fields/TECH_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>TECH_Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TTP</fullName>
            </value>
            <value>
                <fullName>TTC</fullName>
            </value>
            <value>
                <fullName>Panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>