GearsetPOC/force-app/main/default/objects/Subscription_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Duration__c</columns>
    <columns>Status__c</columns>
    <columns>Subscription_Type_SVOC_ID__c</columns>
    <columns>Subscription_Category__c</columns>
    <columns>TECH_Program_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>